--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@discord/embedded-app-sdk": "^1.0.0"
+	}
 }
